Unreviewed, suppress warning https://bugs.webkit.org/show_bug.cgi?id=256030 rdar://108593611

* Source/JavaScriptCore/jit/JITOperations.cpp:
(JSC::JSC_DEFINE_JIT_OPERATION):

Canonical link: https://commits.webkit.org/263448@main